<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mkdutton.feedback.LvFeedbackActivity"
    android:animateLayoutChanges="true"
    android:background="@color/backgroundColor">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/backgroundColor">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"/>


        <EditText
            android:id="@+id/enterCampaignIDText"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_gravity="center"
            android:hint="@string/enterIDText"
            android:textColorHint="@color/graycolor"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:textColor="@color/blackColor"
            android:background="@drawable/custom_edittext"
            android:layout_marginTop="30dp"/>


        <Switch
            android:id="@+id/anon_switch"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:text="@string/switchMessage"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="30dp" />


        <LinearLayout
            android:id="@+id/contactView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/contactName"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_gravity="center"
                android:hint="@string/name"
                android:textColorHint="@color/graycolor"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:textColor="@color/blackColor"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="30dp"/>

            <EditText
                android:id="@+id/contactInfo"
                android:layout_width="270dp"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_gravity="center"
                android:hint="@string/info"
                android:textColorHint="@color/graycolor"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:textColor="@color/blackColor"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="30dp"/>

        </LinearLayout>



        <EditText
            android:id="@+id/feedbackMessageText"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:minHeight="85dp"
            android:layout_gravity="center"
            android:hint="@string/leavefeedbackmessage"
            android:textColorHint="@color/graycolor"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:textColor="@color/blackColor"
            android:background="@drawable/custom_edittext"
            android:layout_marginTop="30dp" />

        <Button
            android:id="@+id/submitFeedbackBtn"
            android:text="@string/submitFeedback"
            android:minHeight="60dp"
            android:layout_gravity="center"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:background="@drawable/button_states"
            android:maxHeight="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"/>


    </LinearLayout>

</ScrollView>