<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mkdutton.feedback.LoginActivity"
    android:background="@color/backgroundColor"
    android:id="@+id/login_root">

    <ImageView
        android:id="@+id/recoverIcon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_launcher"
        android:translationZ="15dp"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/Icon_description" />


    <EditText
        android:id="@+id/recoverEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/emailToRecover"
        android:textColorHint="@color/graycolor"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textColor="@color/blackColor"
        android:background="@drawable/custom_edittext"
        android:inputType="textEmailAddress"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/recoverBtn"
        android:layout_alignRight="@+id/recoverBtn"
        android:layout_below="@+id/recoverIcon"
        android:layout_marginTop="40dp" />


    <Button
        android:id="@+id/recoverBtn"
        android:text="@string/recover"
        android:minHeight="60dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="@drawable/button_states"
        android:maxHeight="60dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/recoverEmail"
        android:layout_marginTop="40dp" />



</RelativeLayout>
